corrected the display of covers

--- a/src/blocks/course/card/card.module.scss
+++ b/src/blocks/course/card/card.module.scss
@@ -14,7 +14,7 @@
 
 .image {
   width: 100%;
-  height: 240px;
+  max-height: 240px;
   border-top-left-radius: var(--border-radius);
   border-top-right-radius: var(--border-radius);
 }
